# This is a configuration file that is used to specify additional options for setuptools, the package that is commonly used to build and distribute Python packages.
# It can include options such as the package's entry points, the location of the package's data files, and various build and distribution options.
# The name option is used to specify the name of the package being built. In this case, the package is named portuguese_grades.
# However, it's important to note that this is only a small part of the setup.cfg file that is typically used in a Python project.
# In addition to the [metadata] section, the file can also contain sections for defining the package's requirements, scripts, entry points, and more.

[metadata]
name = portuguese_grades
